@@ -10,9 +10,15 @@ AM_LDFLAGS = \
 
 noinst_PROGRAMS = \
 	example-1 \
-	example-2
+	example-2 \
+	example-3
 
 example_1_SOURCES = example-1.c
 
 example_2_SOURCES = example-2.c
+
+example_3_SOURCES = example-3.c
+
+EXTRA_DIST = \
+	example-3.png
 
