@@ -1,5 +1,12 @@
 2008-11-13  Robert Staudinger  <robsta@gnome.org>
 
+	* examples/Makefile.am:
+	* examples/example-3.c (expose_cb), (main):
+	* examples/example-3.png:
+	Example demonstrating `border-image'.
+
+2008-11-13  Robert Staudinger  <robsta@gnome.org>
+
 	* ccss/ccss-border-image-parser.c (ccss_block_parse_border_image):
 	* ccss/ccss-border-image.c (create_tile), (create_border),
 	(create_middle), (paint), (ccss_border_image_draw):
